--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -106,17 +106,16 @@ set -g @thumbs-command 'echo -n {} | pbcopy' # copy to clipboard
 set -g @thumbs-key C
 
 # my plugins (`git@github.com:` clones with ssh key for development)
-set -g @plugin 'git@github.com:joshmedeski/t-smart-tmux-session-manager'
+# set -g @plugin 'git@github.com:joshmedeski/t-smart-tmux-session-manager'
 set -g @plugin 'git@github.com:joshmedeski/tmux-fzf-url'
 set -g @plugin 'git@github.com:joshmedeski/tmux-nerd-font-window-name'
-set -g @plugin 'git@github.com:joshmedeski/tmux-overmind'
+# set -g @plugin 'git@github.com:joshmedeski/tmux-overmind'
 
 # community plugins
-# TODO: improve formatting or drop
-set -g @plugin 'mskelton/tmux-last'             # <prefix>+t
 set -g @plugin 'christoomey/vim-tmux-navigator' # <ctrl>+hjkl
+set -g @plugin 'fcsonline/tmux-thumbs'          # <cmd|shift>+c
+set -g @plugin 'jimeh/tmuxifier'
 set -g @plugin 'omerxx/tmux-sessionx'
-set -g @plugin 'fcsonline/tmux-thumbs' # <cmd|shift>+c
 
 set -g @plugin 'tmux-plugins/tpm'        # load tpm
 run "$HOME/.config/tmux/plugins/tpm/tpm" # run tpm (always end of file)
