feat: ignore poetry autocomplete

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,4 @@ run
 .gitconfig
 .config/fish/conf.d/clickup.fish
 Library/Preferences/ru.keepcoder.Telegram.plist
+.config/fish/completions/poetry.fish
