feat: ignore tmux plugins (just git submodules)

--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,4 @@ run
 .config/fish/conf.d/clickup.fish
 Library/Preferences/ru.keepcoder.Telegram.plist
 .config/fish/completions/poetry.fish
+.config/tmux/plugins
