--- a/.config/bin/build
+++ b/.config/bin/build
@@ -64,6 +64,7 @@ if [ -f pnpm-lock.yaml ]; then
 	pnpm run "$BUILD_SCRIPT"
 fi
 
+echo "Build complete"
 echo "Press 'q' or 'esc' to exit"
 while true; do
 	read -rsn1 input # Read a single character without displaying it
