feat: add ollama and fx icons

--- a/.config/tmux/tmux-nerd-font-window-name.yml
+++ b/.config/tmux/tmux-nerd-font-window-name.yml
@@ -8,7 +8,9 @@ icons:
   bun: "🥟"
   docker: "🐳"
   fish: "🐠"
+  fx: "📄"
   nvim: "📝"
+  ollama: "🦙"
   overmind: "👀"
   stripe-mock: "💳"
   stripe: "💳"
