feat: update bindings

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -56,8 +56,9 @@ bind c new-window -c '#{pane_current_path}'
 # TODO: repeat this for all bindings
 bind -N "⌘+g lazygit " g new-window -c "#{pane_current_path}" -n "🌳" "lazygit 2> /dev/null"
 bind -N "⌘+G gh-dash " G new-window -c "#{pane_current_path}" -n "😺" "ghd 2> /dev/null"
-bind -N "⌘+b build" B split-window -v -l 10 b
-bind -N "⌘+d dev" D split-window -v -l 10 d
+bind -N "⌘+b build" b split-window -v -l 10 build
+bind -N "⌘+d dev" D split-window -v -l 10 dev
+bind -N "⌘+R run a script" Y split-window -v -l 10 "npm run (jq -r '.scripts | keys[]' package.json | fzf --no-border)"
 bind -N "⌘+Q kill current session" Q kill-session
 bind h select-pane -L
 bind j select-pane -D
