hore: remove quotes from github.com

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -103,7 +103,7 @@ set -g @tmux-nerd-font-window-name-show-name false
 set -g @thumbs-command 'echo -n {} | pbcopy' # copy to clipboard
 set -g @thumbs-key C
 
-# my plugins (`git@github.com:` clones with ssh key for development)
+# my plugins (git@github.com: clones with ssh key for development)
 # set -g @plugin 'git@github.com:joshmedeski/t-smart-tmux-session-manager'
 set -g @plugin 'git@github.com:joshmedeski/tmux-fzf-url'
 set -g @plugin 'git@github.com:joshmedeski/tmux-nerd-font-window-name'
