feat: simplify flags on sesh binding

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -76,7 +76,7 @@ bind-key e send-keys "tmux capture-pane -p -S - | nvim -c 'set buftype=nofile' +
 # NOTE: has icons but is less stable
 # bind-key "K" run-shell "sesh_fzf_tmux_choose"
 bind-key "K" run-shell "sesh connect \"$(
-	sesh list -ictz | fzf-tmux -p 55%,60% \
+	sesh list -i | fzf-tmux -p 55%,60% \
 		--no-sort --border-label ' sesh ' --prompt '⚡  ' \
 		--header '  ^a all ^t tmux ^x zoxide ^g config ^d tmux kill ^f find' \
 		--bind 'tab:down,btab:up' \
