--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -73,6 +73,10 @@ bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
 bind-key x kill-pane # skip "kill-pane 1? (y/n)" prompt (cmd+w)
 bind-key e send-keys "tmux capture-pane -p -S - | nvim -c 'set buftype=nofile' +" Enter
 
+bind-key "J" display-popup -E "sesh connect \"$(
+	sesh list -i | gum filter --limit 1 --placeholder 'Choose a session' --height 50 --prompt='⚡'
+)\""
+
 # NOTE: has icons but is less stable
 # bind-key "K" run-shell "sesh_fzf_tmux_choose"
 bind-key "K" run-shell "sesh connect \"$(
