feat: add omer's floax tmux plugin

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -118,6 +118,7 @@ set -g @plugin 'christoomey/vim-tmux-navigator' # <ctrl>+hjkl
 set -g @plugin 'fcsonline/tmux-thumbs'          # <cmd|shift>+c
 set -g @plugin 'jimeh/tmuxifier'
 set -g @plugin 'omerxx/tmux-sessionx'
+set -g @plugin 'omerxx/tmux-floax'
 
 set -g @plugin 'tmux-plugins/tpm'        # load tpm
 run "$HOME/.config/tmux/plugins/tpm/tpm" # run tpm (always end of file)
