--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -17,8 +17,8 @@ set-option -g display-time 3000
 # set-hook -g client-session-changed 'run-shell -t :1 "tmux-session-changed"'
 
 # colors
-set -g default-terminal "tmux-256color"
-set -g terminal-overrides ",xterm-256color:RGB"
+set-option -g default-terminal "screen-256color"
+set-option -sa terminal-features ',xterm-256color:RGB'
 
 set -g base-index 1          # start indexing windows at 1 instead of 0
 set -g detach-on-destroy off # don't exit from tmux when closing a session
@@ -110,7 +110,7 @@ set -g @thumbs-key C
 # my plugins (git@github.com: clones with ssh key for development)
 # set -g @plugin 'git@github.com:joshmedeski/t-smart-tmux-session-manager'
 set -g @plugin 'git@github.com:joshmedeski/tmux-fzf-url'
-set -g @plugin 'git@github.com:joshmedeski/tmux-nerd-font-window-name'
+# set -g @plugin 'git@github.com:joshmedeski/tmux-nerd-font-window-name'
 # set -g @plugin 'git@github.com:joshmedeski/tmux-overmind'
 
 # community plugins
@@ -118,7 +118,7 @@ set -g @plugin 'christoomey/vim-tmux-navigator' # <ctrl>+hjkl
 set -g @plugin 'fcsonline/tmux-thumbs'          # <cmd|shift>+c
 set -g @plugin 'jimeh/tmuxifier'
 set -g @plugin 'omerxx/tmux-sessionx'
-set -g @plugin 'omerxx/tmux-floax'
+# set -g @plugin 'omerxx/tmux-floax'
 
 set -g @plugin 'tmux-plugins/tpm'        # load tpm
 run "$HOME/.config/tmux/plugins/tpm/tpm" # run tpm (always end of file)
