feat: update k binding to sesh list

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -72,13 +72,13 @@ bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
 bind-key x kill-pane # skip "kill-pane 1? (y/n)" prompt (cmd+w)
 bind-key e send-keys "tmux capture-pane -p -S - | nvim -c 'set buftype=nofile' +" Enter
 
-bind-key "J" display-popup -E "sesh connect \"$(
-	sesh list -i | gum filter --limit 1 --placeholder 'Choose a session' --height 50 --prompt='⚡'
+bind-key "K" display-popup -E -w 40% "sesh connect \"$(
+	sesh list -i | gum filter --limit 1 --fuzzy --no-sort --placeholder 'Pick a sesh' --prompt='⚡'
 )\""
 
 # NOTE: has icons but is less stable
 # bind-key "K" run-shell "sesh_fzf_tmux_choose"
-bind-key "K" run-shell "sesh connect \"$(
+bind-key "J" run-shell "sesh connect \"$(
 	sesh list -i | fzf-tmux -p 55%,60% \
 		--no-sort --border-label ' sesh ' --prompt '⚡  ' \
 		--header '  ^a all ^t tmux ^x zoxide ^g config ^d tmux kill ^f find' \
