chore: update plugins

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -109,14 +109,17 @@ set -g @thumbs-key C
 # my plugins (git@github.com: clones with ssh key for development)
 # set -g @plugin 'git@github.com:joshmedeski/t-smart-tmux-session-manager'
 set -g @plugin 'git@github.com:joshmedeski/tmux-fzf-url'
-# set -g @plugin 'git@github.com:joshmedeski/tmux-nerd-font-window-name'
+set -g @plugin 'git@github.com:joshmedeski/tmux-nerd-font-window-name'
 # set -g @plugin 'git@github.com:joshmedeski/tmux-overmind'
+set -g @tnotify-custom-cmd 'bash ~/c/dotfiles/bin/tmux-notify.sh'
 
 # community plugins
 set -g @plugin 'christoomey/vim-tmux-navigator' # <ctrl>+hjkl
 set -g @plugin 'fcsonline/tmux-thumbs'          # <cmd|shift>+c
-set -g @plugin 'jimeh/tmuxifier'
+# set -g @plugin 'jimeh/tmuxifier'
+set -g @plugin 'rickstaa/tmux-notify'
 set -g @plugin 'omerxx/tmux-sessionx'
+set -g @plugin 'IdoKendo/tmux-lazy'
 # set -g @plugin 'omerxx/tmux-floax'
 
 set -g @plugin 'tmux-plugins/tpm'        # load tpm
