feat: allow joining and breaking tmux panes with macOS bindings

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -59,6 +59,8 @@ bind -N "⌘+b build" b split-window -v -l 10 build
 bind -N "⌘+d dev" D split-window -v -l 10 dev
 bind -N "⌘+R run a script" Y split-window -v -l 10 "npm run (jq -r '.scripts | keys[]' package.json | fzf --no-border)"
 bind -N "⌘+Q kill current session" Q kill-session
+bind -N "⌘+⇧+t break pane" B break-pane
+bind -N "⌘+^+t join pane" J join-pane -t 1
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
