chore: format import

--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,4 +1,6 @@
-import = ["/Users/joshmedeski/.config/alacritty/catppuccin/catppuccin-mocha.toml"]
+import = [
+  "/Users/joshmedeski/.config/alacritty/catppuccin/catppuccin-mocha.toml",
+]
 live_config_reload = true
 
 [env]
