chore: upate spelling of config

--- a/.config/superfile/config.toml
+++ b/.config/superfile/config.toml
@@ -1,5 +1,5 @@
-transparent_backgroun = true
-metadata = false
+transparent_background = true
+# metadata = false
 # change your theme
 # theme = 'catpuccin'
 # 
