--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -75,23 +75,28 @@ bind-key x kill-pane # skip "kill-pane 1? (y/n)" prompt (cmd+w)
 bind-key e send-keys "tmux capture-pane -p -S - | nvim -c 'set buftype=nofile' +" Enter
 
 bind-key "K" display-popup -E -w 40% "sesh connect \"$(
-	sesh list -i | gum filter --limit 1 --fuzzy --no-sort --placeholder 'Pick a sesh' --prompt='⚡'
+  sesh list -i | gum filter --limit 1 --fuzzy --no-sort --placeholder 'Pick a sesh' --prompt='⚡'
+)\""
+
+bind-key "J" display-popup -E -w 40% "sesh-dev connect \"$(
+  sesh-dev list -i | gum filter --limit 1 --fuzzy --no-sort --placeholder 'Pick a sesh' --prompt='⚡'
 )\""
 
 # NOTE: has icons but is less stable
 # bind-key "K" run-shell "sesh_fzf_tmux_choose"
-bind-key "J" run-shell "sesh connect \"$(
-	sesh list -i | fzf-tmux -p 55%,60% \
-		--no-sort --border-label ' sesh ' --prompt '⚡  ' \
-		--header '  ^a all ^t tmux ^x zoxide ^g config ^d tmux kill ^f find' \
-		--bind 'tab:down,btab:up' \
-		--bind 'ctrl-a:change-prompt(⚡  )+reload(sesh list -i)' \
-		--bind 'ctrl-t:change-prompt(🪟  )+reload(sesh list -it)' \
-		--bind 'ctrl-g:change-prompt(⚙️  )+reload(sesh list -ic)' \
-		--bind 'ctrl-x:change-prompt(📁  )+reload(sesh list -iz)' \
-		--bind 'ctrl-f:change-prompt(🔎  )+reload(fd -H -d 2 -t d -E .Trash . ~)' \
-		--bind 'ctrl-d:execute(tmux kill-session -t {})+change-prompt(⚡  )+reload(sesh list)'
-)\""
+# bind-key "J" run-shell "sesh connect $(
+# 	sesh list -i | fzf-tmux -p 55%,60% \
+# 		--no-sort --border-label ' sesh ' --prompt '⚡  ' \
+# 		--header '  ^a all ^t tmux ^x zoxide ^g config ^d tmux kill ^f find' \
+# 		--bind 'tab:down,btab:up' \
+# 		--bind 'ctrl-a:change-prompt(⚡  )+reload(sesh list -i)' \
+# 		--bind 'ctrl-t:change-prompt(🪟  )+reload(sesh list -it)' \
+# 		--bind 'ctrl-g:change-prompt(⚙️  )+reload(sesh list -ic)' \
+# 		--bind 'ctrl-x:change-prompt(📁  )+reload(sesh list -iz)' \
+# 		--bind 'ctrl-f:change-prompt(🔎  )+reload(fd -H -d 2 -t d -E .Trash . ~)' \
+# 		--bind 'ctrl-d:execute(tmux kill-session -t {})+change-prompt(⚡  )+reload(sesh list)'
+# )"
+
 # NOTE: can be used for debugging
 # )\" 2> /tmp/sesh-$(date +"%Y-%m-%d-%H-%M-%S").txt"
 
@@ -121,7 +126,7 @@ set -g @plugin 'fcsonline/tmux-thumbs'          # <cmd|shift>+c
 # set -g @plugin 'jimeh/tmuxifier'
 set -g @plugin 'rickstaa/tmux-notify'
 set -g @plugin 'omerxx/tmux-sessionx'
-set -g @plugin 'IdoKendo/tmux-lazy'
+# set -g @plugin 'IdoKendo/tmux-lazy'
 # set -g @plugin 'omerxx/tmux-floax'
 
 set -g @plugin 'tmux-plugins/tpm'        # load tpm
