feat: update yazi formatting and use `run`

--- a/.config/yazi/yazi.toml
+++ b/.config/yazi/yazi.toml
@@ -1,68 +1,117 @@
 [manager]
-ratio         = [ 1, 2, 4 ]
-sort_by        = "modified"
+ratio = [1, 2, 4]
+sort_by = "modified"
 sort_sensitive = true
-sort_reverse   = true
+sort_reverse = true
 sort_dir_first = true
-linemode       = "none"
-show_hidden    = true
-show_symlink   = true
+linemode = "none"
+show_hidden = true
+show_symlink = true
 
 [preview]
-tab_size        = 2
-max_width       = 2000
-max_height      = 1200
-cache_dir       = ""
-ueberzug_scale  = 1
-ueberzug_offset = [ 0, 0, 0, 0 ]
+tab_size = 2
+max_width = 2000
+max_height = 1200
+cache_dir = ""
+ueberzug_scale = 1
+ueberzug_offset = [0, 0, 0, 0]
 
 [opener]
 edit = [
-	{ exec = '$EDITOR "$@"', block = true,  for = "unix" },
-	{ exec = 'code "%*"',    orphan = true, for = "windows" },
+  { run = '$EDITOR "$@"', block = true, for = "unix" },
+  { run = 'code "%*"', orphan = true, for = "windows" },
 ]
 open = [
-	{ exec = 'xdg-open "$@"',             desc = "Open", for = "linux" },
-	{ exec = 'open "$@"',                 desc = "Open", for = "macos" },
-	{ exec = 'start "%1"', orphan = true, desc = "Open", for = "windows" }
+  { run = 'xdg-open "$@"', desc = "Open", for = "linux" },
+  { run = 'open "$@"', desc = "Open", for = "macos" },
+  { run = 'start "%1"', orphan = true, desc = "Open", for = "windows" },
 ]
 reveal = [
-	{ exec = 'open -R "$1"',                       desc = "Reveal", for = "macos" },
-	{ exec = 'explorer /select,%1', orphan = true, desc = "Reveal", for = "windows" },
-	{ exec = '''exiftool "$1"; echo "Press enter to exit"; read''', block = true, desc = "Show EXIF", for = "unix" },
+  { run = 'open -R "$1"', desc = "Reveal", for = "macos" },
+  { run = 'explorer /select,%1', orphan = true, desc = "Reveal", for = "windows" },
+  { run = '''exiftool "$1"; echo "Press enter to exit"; read''', block = true, desc = "Show EXIF", for = "unix" },
 ]
 extract = [
-	{ exec = 'unar "$1"', desc = "Extract here", for = "unix" },
-	{ exec = 'unar "%1"', desc = "Extract here", for = "windows" },
+  { run = 'unar "$1"', desc = "Extract here", for = "unix" },
+  { run = 'unar "%1"', desc = "Extract here", for = "windows" },
 ]
 play = [
-	{ exec = 'mpv "$@"', orphan = true, for = "unix" },
-	{ exec = 'mpv "%1"', orphan = true, for = "windows" },
-	{ exec = '''mediainfo "$1"; echo "Press enter to exit"; read''', block = true, desc = "Show media info", for = "unix" },
+  { run = 'mpv "$@"', orphan = true, for = "unix" },
+  { run = 'mpv "%1"', orphan = true, for = "windows" },
+  { run = '''mediainfo "$1"; echo "Press enter to exit"; read''', block = true, desc = "Show media info", for = "unix" },
 ]
 
 [open]
 rules = [
-	{ name = "*/", use = [ "edit", "open", "reveal" ] },
+  { name = "*/", use = [
+    "edit",
+    "open",
+    "reveal",
+  ] },
 
-	{ mime = "text/*",  use = [ "edit", "reveal" ] },
-	{ mime = "image/*", use = [ "open", "reveal" ] },
-	{ mime = "video/*", use = [ "play", "reveal" ] },
-	{ mime = "audio/*", use = [ "play", "reveal" ] },
-	{ mime = "inode/x-empty", use = [ "edit", "reveal" ] },
+  { mime = "text/*", use = [
+    "edit",
+    "reveal",
+  ] },
+  { mime = "image/*", use = [
+    "open",
+    "reveal",
+  ] },
+  { mime = "video/*", use = [
+    "play",
+    "reveal",
+  ] },
+  { mime = "audio/*", use = [
+    "play",
+    "reveal",
+  ] },
+  { mime = "inode/x-empty", use = [
+    "edit",
+    "reveal",
+  ] },
 
-	{ mime = "application/json", use = [ "edit", "reveal" ] },
-	{ mime = "*/javascript",     use = [ "edit", "reveal" ] },
+  { mime = "application/json", use = [
+    "edit",
+    "reveal",
+  ] },
+  { mime = "*/javascript", use = [
+    "edit",
+    "reveal",
+  ] },
 
-	{ mime = "application/zip",             use = [ "extract", "reveal" ] },
-	{ mime = "application/gzip",            use = [ "extract", "reveal" ] },
-	{ mime = "application/x-tar",           use = [ "extract", "reveal" ] },
-	{ mime = "application/x-bzip",          use = [ "extract", "reveal" ] },
-	{ mime = "application/x-bzip2",         use = [ "extract", "reveal" ] },
-	{ mime = "application/x-7z-compressed", use = [ "extract", "reveal" ] },
-	{ mime = "application/x-rar",           use = [ "extract", "reveal" ] },
+  { mime = "application/zip", use = [
+    "extract",
+    "reveal",
+  ] },
+  { mime = "application/gzip", use = [
+    "extract",
+    "reveal",
+  ] },
+  { mime = "application/x-tar", use = [
+    "extract",
+    "reveal",
+  ] },
+  { mime = "application/x-bzip", use = [
+    "extract",
+    "reveal",
+  ] },
+  { mime = "application/x-bzip2", use = [
+    "extract",
+    "reveal",
+  ] },
+  { mime = "application/x-7z-compressed", use = [
+    "extract",
+    "reveal",
+  ] },
+  { mime = "application/x-rar", use = [
+    "extract",
+    "reveal",
+  ] },
 
-	{ mime = "*", use = [ "open", "reveal" ] },
+  { mime = "*", use = [
+    "open",
+    "reveal",
+  ] },
 ]
 
 [tasks]
@@ -72,9 +121,7 @@ bizarre_retry = 5
 
 [plugins]
 preload = []
-prepend_previewers = [
-	{ mime = "image/heic", run = "heic" },
-]
+prepend_previewers = [{ mime = "image/heic", run = "heic" }]
 
 [log]
 enabled = false
