--- a/.config/aerospace/aerospace.toml
+++ b/.config/aerospace/aerospace.toml
@@ -1,64 +1,21 @@
-# TODO: ask about auto-complete lsp support for this file name?
-
-# Place a copy of this config to ~/.aerospace.toml
-# After that, you can edit ~/.aerospace.toml to your liking
-
-# It's not necessary to copy all keys to your config.
-# If the key is missing in your config, "default-config.toml" will serve as a fallback
-
-# You can use it to add commands that run after login to macOS user session.
-# 'start-at-login' needs to be 'true' for 'after-login-command' to work
-# Available commands: https://nikitabobko.github.io/AeroSpace/commands
-after-login-command = []
-
-# You can use it to add commands that run after AeroSpace startup.
-# 'after-startup-command' is run after 'after-login-command'
-# Available commands : https://nikitabobko.github.io/AeroSpace/commands
-after-startup-command = []
-
-# Start AeroSpace at login
+# after-login-command = []
+# after-startup-command = []
 start-at-login = true
 
-# Normalizations. See: https://nikitabobko.github.io/AeroSpace/guide#normalization
-enable-normalization-flatten-containers = false
+enable-normalization-flatten-containers = true
 enable-normalization-opposite-orientation-for-nested-containers = true
 
 # TODO: learn what is this?
 # non-empty-workspaces-root-containers-layout-on-startup = 'smart'
 
-# See: https://nikitabobko.github.io/AeroSpace/guide#layouts
-# The 'accordion-padding' specifies the size of accordion padding
-# You can set 0 to disable the padding feature
-accordion-padding = 30
-
-# Possible values: tiles|accordion
+accordion-padding = 0
 default-root-container-layout = 'tiles'
-
-# Possible values: horizontal|vertical|auto
-# 'auto' means: wide monitor (anything wider than high) gets horizontal orientation,
-#               tall monitor (anything higher than wide) gets vertical orientation
 default-root-container-orientation = 'auto'
-
-# Possible values: (qwerty|dvorak)
-# See https://nikitabobko.github.io/AeroSpace/guide#key-mapping
 key-mapping.preset = 'qwerty'
 
-# Mouse follows focus when focused monitor changes
-# Drop it from your config, if you don't like this behavior
-# See https://nikitabobko.github.io/AeroSpace/guide#on-focus-changed-callbacks
-# See https://nikitabobko.github.io/AeroSpace/commands#move-mouse
 on-focused-monitor-changed = ['move-mouse monitor-lazy-center']
-on-focus-changed = [
-  'move-mouse window-lazy-center',
-] # Mouse lazily follows any focus (window or workspace)
+on-focus-changed = ['move-mouse window-lazy-center']
 
-# Gaps between windows (inner-*) and between monitor edges (outer-*).
-# Possible values:
-# - Constant:     gaps.outer.top = 8
-# - Per monitor:  gaps.outer.top = [{ monitor.main = 16 }, { monitor."some-pattern" = 32 }, 24]
-#                 In this example, 24 is a default value when there is no match.
-#                 Monitor pattern is the same as for 'workspace-to-monitor-force-assignment'.
-#                 See: https://nikitabobko.github.io/AeroSpace/guide#assign-workspaces-to-monitors
 [gaps]
 inner.horizontal = 8
 inner.vertical = 2
@@ -67,178 +24,56 @@ outer.bottom = 2
 outer.top = 2
 outer.right = 2
 
-# 'main' binding mode declaration
-# See: https://nikitabobko.github.io/AeroSpace/guide#binding-modes
-# 'main' binding mode must be always presented
 [mode.main.binding]
-
-# All possible keys:
-# - Letters.        a, b, c, ..., z
-# - Numbers.        0, 1, 2, ..., 9
-# - Keypad numbers. keypad0, keypad1, keypad2, ..., keypad9
-# - F-keys.         f1, f2, ..., f20
-# - Special keys.   minus, equal, period, comma, slash, backslash, quote, semicolon, backtick,
-#                   leftSquareBracket, rightSquareBracket, space, enter, esc, backspace, tab
-# - Keypad special. keypadClear, keypadDecimalMark, keypadDivide, keypadEnter, keypadEqual,
-#                   keypadMinus, keypadMultiply, keypadPlus
-# - Arrows.         left, down, up, right
-
-# All possible modifiers: cmd, alt, ctrl, shift
-
-# All possible commands: https://nikitabobko.github.io/AeroSpace/commands
-
-# See: https://nikitabobko.github.io/AeroSpace/commands#exec-and-forget
-# You can uncomment the following lines to open up terminal with alt + enter shortcut (like in i3)
-# alt-enter = '''exec-and-forget 
-# tell application "Wezterm"
-#     do script
-#     activate
-# end tell'
-# '''
-
-# See: https://nikitabobko.github.io/AeroSpace/commands#layout
 # TODO: come up with a more intuitive keybinding for this?
 alt-slash = 'layout tiles horizontal vertical'
 alt-comma = 'layout accordion horizontal vertical'
 
-# See: https://nikitabobko.github.io/AeroSpace/commands#focus
 # TODO: integrate with tmux vim navigation
 alt-shift-h = 'focus left'
 alt-shift-j = 'focus down'
 alt-shift-k = 'focus up'
 alt-shift-l = 'focus right'
-alt-shift-0 = 'balance-sizes'
 
 # TODO: is this helpful? How does it work?
-alt-shift-n = 'split opposite'
-alt-shift-ctrl-0 = 'flatten-workspace-tree'
+# alt-shift-n = 'split opposite'
+alt-shift-minus = 'resize smart -100'
+alt-shift-equal = 'resize smart +100'
 
-# See: https://nikitabobko.github.io/AeroSpace/commands#move
-ctrl-alt-shift-h = 'move left'
-ctrl-alt-shift-j = 'move down'
-ctrl-alt-shift-k = 'move up'
-ctrl-alt-shift-l = 'move right'
-ctrl-alt-shift-f = 'fullscreen'
+alt-shift-1 = ['move-node-to-workspace 1', 'workspace 1']
+alt-shift-2 = ['move-node-to-workspace 2', 'workspace 2']
+alt-shift-3 = ['move-node-to-workspace 3', 'workspace 3']
+alt-shift-4 = ['move-node-to-workspace 4', 'workspace 4']
+alt-shift-5 = ['move-node-to-workspace 5', 'workspace 5']
+alt-shift-6 = ['move-node-to-workspace 6', 'workspace 6']
+alt-shift-7 = ['move-node-to-workspace 7', 'workspace 7']
+alt-shift-8 = ['move-node-to-workspace 8', 'workspace 8']
+alt-shift-9 = ['move-node-to-workspace 9', 'workspace 9']
 
-# See: https://nikitabobko.github.io/AeroSpace/commands#resize
-alt-shift-minus = 'resize smart -50'
-alt-shift-equal = 'resize smart +50'
-alt-shift-8 = 'resize smart -200'
-alt-shift-9 = 'resize smart +200'
+alt-1 = 'workspace 1'
+alt-2 = 'workspace 2'
+alt-3 = 'workspace 3'
+alt-4 = 'workspace 4'
+alt-5 = 'workspace 5'
+alt-6 = 'workspace 6'
+alt-7 = 'workspace 7'
+alt-8 = 'workspace 8'
+alt-9 = 'workspace 9'
 
-# See: https://nikitabobko.github.io/AeroSpace/commands#workspace
-# alt-1 = 'workspace 1' # 1Password
-# alt-2 = 'workspace 2' # 2FA
-# alt-3 = 'workspace 3'
-# alt-4 = 'workspace 4'
-# alt-5 = 'workspace 5'
-# alt-6 = 'workspace 6'
-# alt-7 = 'workspace 7'
-# alt-8 = 'workspace 8'
-# alt-9 = 'workspace 9'
-alt-a = 'workspace A' # Terminal
-alt-b = 'workspace B' # Blender
-# alt-c = 'workspace C' # Clipboard manager (Raycast)
-alt-d = 'workspace D' # Discord
-# alt-e = 'workspace E' # Emoji picker (Raycast)
-# alt-f = 'workspace F' # New finder window
-alt-g = 'workspace G' # godot
-alt-i = 'workspace I' # Image Editing
-alt-m = 'workspace M' # messaging
-# alt-n = 'workspace N'
-# alt-o = 'workspace O' # OBS
-alt-p = 'workspace P' # Music
-# alt-q = 'workspace Q'
-# alt-r = 'workspace R'
-alt-s = 'workspace S' # Second Brain
-# alt-t = 'workspace T'
-# alt-u = 'workspace U'
-alt-v = 'workspace V' # Video Editing
-# TODO: I use the terminal with the web a lot, so this might not work
-alt-w = 'workspace W' # Web
-# alt-x = 'workspace X'
-# alt-y = 'workspace Y'
-alt-z = 'workspace Z' # Zoom
-
-# See: https://nikitabobko.github.io/AeroSpace/commands#move-node-to-workspace
-# TODO: revisit 'primary', 'secondary' and 'tertiary' workspaces
-# I used to do this before with Yabai
-
-# alt-shift-1 = 'move-node-to-workspace 1'
-# alt-shift-2 = 'move-node-to-workspace 2'
-# alt-shift-3 = 'move-node-to-workspace 3'
-# alt-shift-4 = 'move-node-to-workspace 4'
-# alt-shift-5 = 'move-node-to-workspace 5'
-# alt-shift-6 = 'move-node-to-workspace 6'
-# alt-shift-7 = 'move-node-to-workspace 7'
-# alt-shift-8 = 'move-node-to-workspace 8'
-# alt-shift-9 = 'move-node-to-workspace 9'
-alt-shift-a = ['move-node-to-workspace A', 'workspace A'] # Terminal
-alt-shift-b = ['move-node-to-workspace B', 'workspace B'] # Blender
-alt-shift-d = ['move-node-to-workspace D', 'workspace D'] # Discord
-# alt-shift-e = 'move-node-to-workspace E'
-# alt-shift-f = 'move-node-to-workspace F'
-alt-shift-g = ['move-node-to-workspace G', 'workspace G'] # godot
-# alt-shift-i = 'move-node-to-workspace I' # Input (Raycast)
-alt-shift-m = ['move-node-to-workspace M', 'workspace M'] # messaging
-alt-shift-p = ['move-node-to-workspace P', 'workspace P'] # Music
-# alt-shift-q = 'move-node-to-workspace Q'
-# alt-shift-r = 'move-node-to-workspace R'
-alt-shift-s = ['move-node-to-workspace S', 'workspace S'] # Second Brain
-# alt-shift-t = 'move-node-to-workspace T'
-# alt-shift-u = 'move-node-to-workspace U'
-alt-shift-v = ['move-node-to-workspace V', 'workspace V'] # Video editing
-alt-shift-w = ['move-node-to-workspace W', 'workspace W'] # Web
-# alt-shift-x = 'move-node-to-workspace X'
-# alt-shift-y = ['move-node-to-workspace Y', 'workspace Y'] # Fantastical
-alt-shift-z = ['move-node-to-workspace Z', 'workspace Z'] # Zoom
-
-# See: https://nikitabobko.github.io/AeroSpace/commands#workspace-back-and-forth
 alt-tab = 'workspace-back-and-forth'
-# See: https://nikitabobko.github.io/AeroSpace/commands#move-workspace-to-monitor
 alt-shift-tab = 'move-workspace-to-monitor --wrap-around next'
 
-# See: https://nikitabobko.github.io/AeroSpace/commands#mode
-# TODO: add 'move' mode to free up more `alt-shift` main binding
-alt-shift-semicolon = 'mode service'
+alt-shift-semicolon = 'mode layout'
 
-# 'service' binding mode declaration.
-# See: https://nikitabobko.github.io/AeroSpace/guide#binding-modes
-[mode.service.binding]
-# alt-shift-b = 'ctrl-node-to-workspace B'
-# alt-shift-c = 'move-node-to-workspace C'
-esc = ['reload-config', 'mode main']
-r = ['flatten-workspace-tree', 'mode main'] # reset layout
-#s = ['layout sticky tiling', 'mode main'] # sticky is not yet supported https://github.com/nikitabobko/AeroSpace/issues/2
-f = [
-  'layout floating tiling',
-  'mode main',
-] # Toggle between floating and tiling layout
-backspace = ['close-all-windows-but-current', 'mode main']
-
-# ctrl-alt-shift-h = ['join-with left', 'mode main']
-# ctrl-alt-shift-j = ['join-with down', 'mode main']
-# ctrl-alt-shift-k = ['join-with up', 'mode main']
-# ctrl-alt-shift-l = ['join-with right', 'mode main']
-
-# [[on-window-detected]]
-# if.app-id = 'com.github.wez.wezterm'
-# run = "move-node-to-workspace A"
-
-# TODO: submit issue for allowing to focus a workspace when an on-window-dected is triggered
-[[on-window-detected]]
-if.app-id = 'com.hnc.Discord'
-run = "move-node-to-workspace D"
-
-[[on-window-detected]]
-if.app-id = 'md.obsidian'
-run = "move-node-to-workspace S"
-
-[[on-window-detected]]
-if.app-id = 'org.blenderfoundation.blender'
-run = "move-node-to-workspace B"
-
-# TODO: alt-shift-o is used for audio output, so where do I want this to go?
-# [[on-window-detected]]
-# if.app-id = 'com.obsproject.obs-studio'
-# run = "move-node-to-workspace O"
+# TODO: come up with a mode that works for me (resizing, moving?)
+[mode.layout.binding]
+esc = ['mode main']
+h = 'move left'
+j = 'move down'
+k = 'move up'
+l = 'move right'
+f = 'fullscreen'
+0 = ['flatten-workspace-tree', 'mode main']
+g = ['layout floating tiling', 'mode main']
+minus = 'resize smart -100'
+equal = 'resize smart +100'
